--- a/index.html
+++ b/index.html
@@ -7,22 +7,103 @@
     <meta name="author" content="">
     <link rel="icon" href="./thumpnail.ico">
 
-    <title>Sticky Footer Template for Bootstrap</title>
+    <title>Suiyun Zhang</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="sticky-footer.css" rel="stylesheet">
+    <link href="./css/sticky-footer.css" rel="stylesheet">
   </head>
 
   <body>
 
     <!-- Begin page content -->
     <main role="main" class="container">
-      <h1 class="mt-5">Sticky footer</h1>
-      <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS.</p>
-      <p>Use <a href="../sticky-footer-navbar">the sticky footer with a fixed navbar</a> if need be, too.</p>
+      <img src="suiyun.jpg" class="rounded float-right" alt="..." width="200px">
+	  <h1 class="mt-5">Suiyun Zhang (张穗云)</h1>	 
+      <p class="lead">
+	  Ph.D candidate 
+	  <br>
+	  <a href=" http://www.thss.tsinghua.edu.cn/" class="card-link">School of Software</a>
+	  <br>
+		<a href="http://www.tsinghua.edu.cn" class="card-link">Tsinghua University </a>
+	  </p>      
+	  <p>
+	  Email: zhangsuiyun13 AT mails.tsinghua.edu.cn
+	  </p>
+	  
+	  <p class="h3 mt-5"> Publications </p>
+	  <hr>
+	  <table style="height: 100px;">
+	  <tbody>
+		<tr>
+		  <td class="align-middle" width="200px">
+		  <img class="project-picture" src="enrichment.png" width="180px">
+		  </td>
+		  <td class="align-middle">
+			User Guided 3D Scene Enrichment
+			<br>
+			<strong>Suiyun Zhang</strong>, Zhizhong Han and Hui Zhang
+			<br>
+			Proceedings on Virtual-Reality Continuum and ITS Applications in Industry (VRCAI), 2016
+			<br>			
+			[<a href="https://doi.org/10.1145/3013971.3014002" class="card-link">paper</a>]
+			[<a href="enrichment.pdf">slides</a>]			
+			</td>		  
+		</tr>
+		<tr>
+		  <td class="align-middle" width="200px">
+		  <img class="project-picture" src="enhancement.png" width="180px">
+		  </td>
+		  <td class="align-middle">
+		  Semantic 3D Indoor Scene Enhancement Using Guide Words
+			<br>
+			<strong>Suiyun Zhang</strong>, Zhizhong Han, Ralph Martin and Hui Zhang
+			<br>
+			The Visual Computer Journal, 2017:1-11
+			<br>			
+			[<a href="https://doi.org/10.1007/s00371-017-1394-5" class="card-link">paper</a>]
+			[<a href="enhancement.pdf" class="card-link">slides</a>]		
+			</td>		  
+		</tr>
+	  </tbody>
+	</table>
+	
+	
+	<p class="h3 mt-5"> Teaching </p>
+	<hr>
+	<ul>
+	<li> test</li>
+	<li> test</li>
+	</ul>
+	
+	<p class="h3 mt-5"> Projects </p>
+	<hr>
+	<table style="height: 100px;">
+	  <tbody>
+		<tr>
+		  <td class="align-middle" height="160px" width="200px">
+		  <img class="project-picture" src="100floor.jpg" width="150px">
+		  </td>
+		  <td class="align-middle">		  
+		  <a href="https://www.microsoft.com/en-us/p/100-floor/9wzdncrfj1f1" class="card-link">100 floor</a>
+		  <a href="https://www.microsoft.com/zh-cn/p/100-floor/9wzdncrfj1f1" class="card-link">再下一百层</a>
+		  
+			</td>		  
+		</tr>
+		<tr>
+		  <td class="align-middle" height="160px" width="200px">
+		  <img class="project-picture" src="humhum.jpg" width="150px">
+		  </td>
+		  <td class="align-middle">		  
+		  <a href="https://www.microsoft.com/en-us/p/hum-hum/9wzdncrfj1f4" class="card-link">Hum!Hum!</a>
+		  <a href="https://www.microsoft.com/zh-cn/p/hum-hum/9wzdncrfj1f4" class="card-link">嗡嗡嗡</a>
+			</td>		  
+		</tr>		
+	  </tbody>
+	</table>
+	
     </main>
 
     <footer class="footer">
