--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<br>
 			<strong>Suiyun Zhang</strong>, Zhizhong Han and Hui Zhang
 			<br>
-			Proceedings on Virtual-Reality Continuum and ITS Applications in Industry (VRCAI), 2016
+			Proceedings of Virtual-Reality Continuum and ITS Applications in Industry (VRCAI), 2016
 			<br>			
 			[<a href="https://doi.org/10.1145/3013971.3014002" class="card-link">paper</a>]
 			[<a href="enrichment.pdf">slides</a>]			
@@ -61,10 +61,10 @@
 			<br>
 			<strong>Suiyun Zhang</strong>, Zhizhong Han, Ralph Martin and Hui Zhang
 			<br>
-			The Visual Computer Journal, 2017:1-11
+			The Visual Computer Journal, Vol 33, 2017
 			<br>			
 			[<a href="https://doi.org/10.1007/s00371-017-1394-5" class="card-link">paper</a>]
-			[<a href="enhancement.pdf" class="card-link">slides</a>]		
+			[<a href="enhancement.pdf">slides</a>]		
 			</td>		  
 		</tr>
 	  </tbody>
@@ -73,9 +73,17 @@
 	
 	<p class="h3 mt-5"> Teaching </p>
 	<hr>
-	<ul>
-	<li> test</li>
-	<li> test</li>
+	<ul>	
+	<li> Teaching Assistant: Introduction to Computer Science Technology, Tsinghua University, 2015 Fall</li>
+	<li> Teaching Assistant: Introduction to Computer Science Technology, Tsinghua University, 2014 Fall</li>
+	<li> Teaching Assistant, <a href="http://www.xuetangx.com/courses/UC_BerkeleyX/CS_184_1x/_/info">CS184.1X Introduction to Computer Graphics</a>, <a href="http://www.xuetangx.com/">xuetangx.com</a>, 2014
+	<li> Teaching Assistant: C++ Programming, Tsinghua University, 2014 Spring</li>
+	</ul>
+	
+	<p class="h3 mt-5"> Honors </p>
+	<hr>
+	<ul>	
+	<li> National Scholarship (2010-2012)</li>		
 	</ul>
 	
 	<p class="h3 mt-5"> Projects </p>
@@ -83,8 +91,8 @@
 	<table style="height: 100px;">
 	  <tbody>
 		<tr>
-		  <td class="align-middle" height="160px" width="200px">
-		  <img class="project-picture" src="100floor.jpg" width="150px">
+		  <td class="align-middle" height="80px" width="80px">
+		  <img class="project-picture" src="100floor.jpg" width="50px">
 		  </td>
 		  <td class="align-middle">		  
 		  <a href="https://www.microsoft.com/en-us/p/100-floor/9wzdncrfj1f1" class="card-link">100 floor</a>
@@ -93,8 +101,8 @@
 			</td>		  
 		</tr>
 		<tr>
-		  <td class="align-middle" height="160px" width="200px">
-		  <img class="project-picture" src="humhum.jpg" width="150px">
+		  <td class="align-middle" height="80px" width="80px">
+		  <img class="project-picture" src="humhum.jpg" width="50px">
 		  </td>
 		  <td class="align-middle">		  
 		  <a href="https://www.microsoft.com/en-us/p/hum-hum/9wzdncrfj1f4" class="card-link">Hum!Hum!</a>
