--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
 	
 	<p class="h3 mt-5"> Teaching </p>
 	<hr>
-	<ul>	
+	<ul>
+	<li> Guest Lecturer: <a href="https://www.makerbean.com/online_courses/glory_maker/04001000_self_driving_raspberrypi_car/class_intro">Build an Autonomous Car with Raspberry Pi</a>, August 2017</li>
 	<li> Teaching Assistant: Introduction to Computer Science Technology, Tsinghua University, 2015 Fall</li>
 	<li> Teaching Assistant: Introduction to Computer Science Technology, Tsinghua University, 2014 Fall</li>
-	<li> Teaching Assistant, <a href="http://www.xuetangx.com/courses/UC_BerkeleyX/CS_184_1x/_/info">CS184.1X Introduction to Computer Graphics</a>, <a href="http://www.xuetangx.com/">xuetangx.com</a>, 2014
+	<li> Teaching Assistant: <a href="http://www.xuetangx.com/courses/UC_BerkeleyX/CS_184_1x/_/info">CS184.1X Introduction to Computer Graphics</a>, <a href="http://www.xuetangx.com/">xuetangx.com</a>, 2014
 	<li> Teaching Assistant: C++ Programming, Tsinghua University, 2014 Spring</li>
 	</ul>
 	
