--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <img src="suiyun.jpg" class="rounded float-right" alt="..." width="200px">
 	  <h1 class="mt-5">Suiyun Zhang (张穗云)</h1>	 
       <p class="lead">
-	  Ph.D candidate 
+	  Ph.D candidate
+	  <br>
+	  <a href="http://cgcad.thss.tsinghua.edu.cn/" class="card-link"> Institute of Computer Graphics and Computer-Aided Design</a>    
 	  <br>
 	  <a href=" http://www.thss.tsinghua.edu.cn/" class="card-link">School of Software</a>
 	  <br>
