--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 	
 	<p class="h3 mt-5"> Honors </p>
 	<hr>
-	<ul>	
+	<ul>
+	<li> The First Prize Scholarship of Tsinghua University (2017)
 	<li> National Scholarship (2010-2012)</li>		
 	</ul>
 	
