--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	  Email: zhangsuiyun13 AT mails.tsinghua.edu.cn
 	  </p>
 	  
-	  <p class="h3 mt-5"> Publications </p>
+	  <p class="h3 mt-5"> Research </p>
 	  <hr>
 	  <table style="height: 100px;">
 	  <tbody>
